	- iana portlist updated.
	- fixup EOL in include directive (reported by Paul Wouters).
	  You can no longer specify newlines in the names of included files.
	- config parser changed. Gives some syntax errors closer to where they 
	  occurred. Does not enforce a space after keyword anymore.
	  Does not allow literal newlines inside quoted strings anymore.

5 February 2009: Wouter
	- ldns 1.5.0 rc as tarball included.
	- 1.3.0 development continues:
	  change in libunbound API: ub_cancel can return an error, that
	  the async_id did not exist, or that it was already delivered.
	  The result could have been delivered just before the cancel 
	  routine managed to acquire the lock, so a caller may get the
	  result at the same time they call cancel.  For this case, 
	  ub_cancel tries to return an error code.
	  Fixes race condition in ub_cancel() libunbound function.
	- MacOSX Leopard cleaner text output from configure.
	- initgroups(3) is called to drop secondary group permissions, if
	  applicable.
	- configure option --with-ldns-builtin forces the use of the 
	  inluded ldns package with the unbound source.  The -I include
	  is put before the others, so it avoids bad include files from
	  an older ldns install.
	- daemon(3) posix call is used when available.
	- testbound test for older fix added.

4 February 2009: Wouter
	- tag for release 1.2.1.
	- trunk setup for 1.3.0 development.

3 February 2009: Wouter
	- noted feature requests in doc/TODO.
	- printout more detailed errors on ssl certificate loading failures.
	- updated IANA portlist.

16 January 2009: Wouter
	- more quiet about ipv6 network failures, i.e. when ipv6 is not
	  available (network unreachable). Debug still printed on high
	  verbosity.
	- unbound-host -4 and -6 options. Stops annoying ipv6 errors when
	  debugging with unbound-host -4 -d ... 
	- more cycle detection for NS-check, addr-check, root-prime and
	  stub-prime queries in the iterator.  Avoids possible deadlock
	  when priming fails.
