@@ -59,7 +59,6 @@ o local-zone directive with authority service, full authority server
  
 o make so revoke bit keys cannot verify signatures
 o option to print UTC timestamps instead of epoch in seconds.
-o print querier IP address on high loglevels.
 
 o infra and lame cache: easier size config (in Mb), show usage in graphs.
 o #226: unbound_control dump_requestlist
@@ -70,5 +69,4 @@ o #231: unbound_checkconf options to output config file data.
 o config entry to denote that a zone is to be treated as unsigned (even if 
   a DS exists to higher trust anchor).
 o see if we can include the python bindings (contrib).
-o see if we can suport var:value (nospace) by parser.
 o remote control read ssl information while priviledged.
